Update controllers and services update functions

--- a/DBMS_Project/computer_store-be/src/main/resources/application.yaml
+++ b/DBMS_Project/computer_store-be/src/main/resources/application.yaml
@@ -7,13 +7,12 @@ spring:
     password: bogdan123
     driver-class-name: org.postgresql.Driver
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
 server:
   port: 8060
